# Pele-Simulation-Result-Processing

./: README.md
pele_processing/: pyproject.toml  requirements.txt
pele_processing/chemical_mechanisms/: sandiego_mechCK.yaml
pele_processing/scripts/: main.py  main_surface_plotting.py  post_result_processing.py
pele_processing/src/additional_processing/: __init__.py
pele_processing/src/additional_processing/analysis/: __init__.py  chapman_jougette.py  chapman_jouguet.py  flame.py
pele_processing/src/additional_processing/core/: __init__.py  domain.py  interfaces.py
pele_processing/src/additional_processing/data/: loaders.py
pele_processing/src/base_processing/: __init__.py
pele_processing/src/base_processing/analysis/: flame.py  geometry.py  pressure_wave.py  shock.py
pele_processing/src/base_processing/config/: __init__.py  loader.py
pele_processing/src/base_processing/core/: __init__.py  domain.py  exceptions.py  interfaces.py
pele_processing/src/base_processing/data/: __init__.py  extractors.py  loaders.py  validators.py
pele_processing/src/base_processing/parallel/: coordinator.py  distribution.py  workers.py
pele_processing/src/base_processing/utils/: __init__.py  logging.py  pele_constants.py  units.py
pele_processing/src/base_processing/visualization/: __init__.py  animators.py  formatters.py  plotters.py  specialized.py  yt_field_plotter.py
pele_processing/src/pele_processing/: __init__.py
pele_processing/src/pele_processing/analysis/: __init__.py  burned_gas.py  flame.py  thermodynamics.py
pele_processing/src/pele_processing/config/: settings.py  validation.py
pele_processing/src/pele_processing/core/: __init__.py  container.py  domain.py  exceptions.py  interfaces.py
pele_processing/src/pele_processing/data/: extractors.py  loaders.py  processors.py
pele_processing/src/pele_processing/parallel/: __init__.py  coordinator.py  distribution.py  strategies.py  workers.py
pele_processing/src/pele_processing/utils/: constants.py  filesystem.py  units.py
pele_processing/src/pele_processing/visualization/: __init__.py  plotters.py
pele_processing/tests/: test_chapman_jouguet.py  test_package_structure.py  test_script_dataless.py  test_script_pele_data.py
